--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: content-box;
+}
 
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+body {
+  font-family: "Epilogue";
+  font-size: 16px;
+  background-color: hsl(0deg, 0%, 98%);
+}
+
+.nav {
+  color: hsl(0deg, 0%, 41%);
+}
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+}
+.nav__section-left {
+  display: flex;
+  width: max-content;
+  border: 1px solid black;
+  gap: 70px;
+}
+.nav__list {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+}
 
 /*# sourceMappingURL=style.css.map */
