--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,7 +21,7 @@ $color-title-main: hsl(0, 0%, 8%);
 
 //Asignar propiedades al body
 
-body{
+body {
     font-family: $font-body;
     font-size: $font-size-body;
     background-color: $color-background;
@@ -33,66 +33,105 @@ body{
     color: $color-text;
     height: 70px;
     font-weight: 500;
+
     &__container {
         display: flex;
         justify-content: space-between;
-        border: 1px solid red;
         height: 100%;
     }
 
-    &__section-left{
+    &__section-left {
         display: flex;
         width: max-content;
-        border: 1px solid black;
         gap: 80px;
         height: 100%;
         align-items: center;
     }
 
-    &__list{
+    &__list {
         display: flex;
-        list-style: none;
         gap: 50px;
     }
 
-    &__item{
+    &__item {
+        height: 70px;
+        line-height: 70px;
+
+        overflow-y: hidden;
         a {
             text-decoration: none;
+            color: $color-text;
+
+            &:hover{
+                color: $color-title-main;
+            }
+        }
+
+
+        ul {
+            display: none;
+            position: absolute;
+            background-color: #fff;
+            height: max-content;
+            line-height: 2;
+            padding: 30px;
+            transform: translateX(-70px);
+            border-radius: 10px;
+            box-shadow: 0 0 10px;
+        }
+
+        &--company{
+            ul {
+                transform: none;
+            }
+        }
+
+        &:hover>ul {
+            display: block;
         }
     }
 
-    &__section-right{
-        border: 1px solid green;
+    &__subitem{
+        img {
+            margin-right: 10px;
+        }
+    }
+
+
+    &__section-right {
         width: max-content;
         display: flex;
         align-items: center;
         gap: 40px;
     }
 
-    &__button{
+    &__button {
         width: 110px;
         height: 40px;
         border-radius: 15px;
         border: none;
         background: none;
         font-size: $font-size-body;
+        color: $color-text;
         cursor: pointer;
-        &:hover{
+        font-weight: 500;
+
+        &:hover {
             color: $color-title-main;
         }
 
-        &--register{
+        &--register {
             border: 2px solid $color-text;
-            &:hover{
+
+            &:hover {
                 border: 2px solid $color-title-main;
             }
         }
     }
 
-    
 
-    &__hamburguer{
+
+    &__hamburguer {
         display: none;
     }
 }
-
