--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,137 +1,194 @@
 //Variables SASS
 
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 
-$font-body: 'Epilogue';
+$font-body: "Epilogue";
 $font-size-body: 16px;
 $color-background: hsl(0, 0%, 98%);
 $color-text: hsl(0, 0%, 41%);
 $color-title-main: hsl(0, 0%, 8%);
 
-
 //Declarar funciones
 
 @function size($t) {
-    @return $t*$font-size-body;
+  @return $t * $font-size-body;
 }
 
 //importar partials o modules
 
-@import 'universals';
+@import "universals";
 
 //Asignar propiedades al body
 
 body {
-    font-family: $font-body;
-    font-size: $font-size-body;
-    background-color: $color-background;
+  font-family: $font-body;
+  font-size: $font-size-body;
+  background-color: $color-background;
 }
 
 //reglas anidadas
 
 .nav {
-    color: $color-text;
+  color: $color-text;
+  height: 70px;
+  font-weight: 500;
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+  }
+
+  &__section-left {
+    display: flex;
+    width: max-content;
+    gap: 80px;
+    height: 100%;
+    align-items: center;
+  }
+
+  &__list {
+    display: flex;
+    gap: 50px;
+  }
+
+  &__item {
     height: 70px;
+    line-height: 70px;
+
+    overflow-y: hidden;
+    a {
+      text-decoration: none;
+      color: $color-text;
+
+      &:hover {
+        color: $color-title-main;
+      }
+    }
+
+    ul {
+      display: none;
+      position: absolute;
+      background-color: #fff;
+      height: max-content;
+      line-height: 2;
+      padding: 30px;
+      transform: translateX(-70px);
+      border-radius: 10px;
+      box-shadow: 0 0 10px;
+    }
+
+    &--company {
+      ul {
+        transform: none;
+      }
+    }
+
+    &:hover > ul {
+      display: block;
+    }
+  }
+
+  &__subitem {
+    img {
+      margin-right: 10px;
+    }
+  }
+
+  &__section-right {
+    width: max-content;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  &__button {
+    width: 110px;
+    height: 40px;
+    border-radius: 15px;
+    border: none;
+    background: none;
+    font-size: $font-size-body;
+    color: $color-text;
+    cursor: pointer;
     font-weight: 500;
 
-    &__container {
-        display: flex;
-        justify-content: space-between;
-        height: 100%;
+    &:hover {
+      color: $color-title-main;
     }
 
-    &__section-left {
-        display: flex;
-        width: max-content;
-        gap: 80px;
-        height: 100%;
-        align-items: center;
+    &--register {
+      border: 2px solid $color-text;
+
+      &:hover {
+        border: 2px solid $color-title-main;
+      }
     }
+  }
 
-    &__list {
-        display: flex;
-        gap: 50px;
+  &__hamburguer {
+    display: none;
+  }
+}
+
+.main {
+  margin: 0 120px 0 168px;
+  padding: 1rem;
+  &__container {
+    display: flex;
+    border: 1px solid black;
+    padding: 80px;
+  }
+
+  &__article {
+    border: 1px solid red;
+    max-width: 800px;
+    display: flex;
+    max-height: 900px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &__heading {
+    color: $color-title-main;
+    font-size: 76px;
+    padding: 1rem;
+    margin: 2rem 0 1.5rem 0;
+  }
+  &__description {
+    max-width: 450px;
+    color: $color-text;
+    max-width: 450px;
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 0;
+    padding-right: 2rem;
+    margin-bottom: 3.5rem;
+  }
+  &__button {
+    width: 150px;
+    height: 50px;
+    border-radius: 1rem;
+    background: $color-title-main;
+    font-size: $font-size-body;
+    color: $color-background;
+    font-weight: 700;
+    border: 1px solid var($color-title-main);
+    &:hover {
+      cursor: pointer;
+      background-color: $color-background;
+      color: $color-title-main;
+      border: 1px solid var($color-title-main);
+      transition: all 0.3ms ease-out;
     }
+  }
 
-    &__item {
-        height: 70px;
-        line-height: 70px;
+  &__img-container {
+    width: 700px;
+    border: 1px solid blue;
+  }
 
-        overflow-y: hidden;
-        a {
-            text-decoration: none;
-            color: $color-text;
-
-            &:hover{
-                color: $color-title-main;
-            }
-        }
-
-
-        ul {
-            display: none;
-            position: absolute;
-            background-color: #fff;
-            height: max-content;
-            line-height: 2;
-            padding: 30px;
-            transform: translateX(-70px);
-            border-radius: 10px;
-            box-shadow: 0 0 10px;
-        }
-
-        &--company{
-            ul {
-                transform: none;
-            }
-        }
-
-        &:hover>ul {
-            display: block;
-        }
-    }
-
-    &__subitem{
-        img {
-            margin-right: 10px;
-        }
-    }
-
-
-    &__section-right {
-        width: max-content;
-        display: flex;
-        align-items: center;
-        gap: 40px;
-    }
-
-    &__button {
-        width: 110px;
-        height: 40px;
-        border-radius: 15px;
-        border: none;
-        background: none;
-        font-size: $font-size-body;
-        color: $color-text;
-        cursor: pointer;
-        font-weight: 500;
-
-        &:hover {
-            color: $color-title-main;
-        }
-
-        &--register {
-            border: 2px solid $color-text;
-
-            &:hover {
-                border: 2px solid $color-title-main;
-            }
-        }
-    }
-
-
-
-    &__hamburguer {
-        display: none;
-    }
+  &__img {
+    width: 500px;
+  }
 }
