--- a/styles/style.scss
+++ b/styles/style.scss
@@ -128,6 +128,13 @@ body {
 
   &__hamburguer {
     display: none;
+    cursor: pointer;
+  }
+  &bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
   }
 }
 
@@ -190,5 +197,37 @@ body {
 
   &__img {
     width: 500px;
+  }
+}
+
+@media (max-width: 800px) {
+  .nav__hamburguer {
+    display: block;
+  }
+  .nav__hamburguer.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .nav__hamburguer.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .nav__hamburguer.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .nav__list {
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: black;
+    width: 100%;
+    text-align: center;
+    transform: 0.3s;
+  }
+  .nav__item {
+    margin: 16px 0;
+  }
+  .nav__list.active {
+    left: 0;
   }
 }
