--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  max-width: 720px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -119,7 +119,6 @@ body {
   display: flex;
   border: 1px solid black;
   justify-content: space-evenly;
-  flex-wrap: wrap;
 }
 .main__article {
   border: 1px solid red;
@@ -184,11 +183,24 @@ body {
 }
 
 @media (max-width: 800px) {
+  .main__container {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .main__article {
+    align-items: center;
+  }
   .nav__hamburguer {
     display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 40%;
+    margin-top: 20px;
+    margin-right: 20px;
   }
   .nav__hamburguer.active .bar:nth-child(2) {
-    opacity: 0;
+    opacity: 20;
   }
   .nav__hamburguer.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
@@ -202,7 +214,7 @@ body {
     top: 70px;
     gap: 0;
     flex-direction: column;
-    background-color: black;
+    background-color: white;
     width: 100%;
     text-align: center;
     transform: 0.3s;
@@ -212,6 +224,9 @@ body {
   }
   .nav__list.active {
     left: 0;
+  }
+  .nav__button {
+    display: none;
   }
 }
 
