--- a/styles/style.scss
+++ b/styles/style.scss
@@ -147,7 +147,6 @@ body {
     display: flex;
     border: 1px solid black;
     justify-content: space-evenly;
-    flex-wrap: wrap;
   }
 
   &__article {
@@ -157,8 +156,8 @@ body {
     max-height: 900px;
     flex-direction: column;
     justify-content: center;
-    h1{
-        border: 1px solid red;
+    h1 {
+      border: 1px solid red;
     }
   }
 
@@ -196,14 +195,14 @@ body {
     }
   }
 
-  &__client-section{
+  &__client-section {
     border: 1px solid blue;
     display: flex;
     justify-content: space-between;
     height: 120px;
-    align-items:flex-end;
-    img{
-        height: max-content;
+    align-items: flex-end;
+    img {
+      height: max-content;
     }
   }
 
@@ -217,11 +216,26 @@ body {
 }
 
 @media (max-width: 800px) {
+  .main {
+    &__container {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
+    &__article {
+      align-items: center;
+    }
+  }
   .nav__hamburguer {
     display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 40%;
+    margin-top: 20px;
+    margin-right: 20px;
   }
   .nav__hamburguer.active .bar:nth-child(2) {
-    opacity: 0;
+    opacity: 20;
   }
   .nav__hamburguer.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
@@ -235,7 +249,7 @@ body {
     top: 70px;
     gap: 0;
     flex-direction: column;
-    background-color: black;
+    background-color: white;
     width: 100%;
     text-align: center;
     transform: 0.3s;
@@ -245,5 +259,8 @@ body {
   }
   .nav__list.active {
     left: 0;
+  }
+  .nav__button {
+    display: none;
   }
 }
