--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@ body {
   display: flex;
   justify-content: space-between;
   height: 100%;
-  border: 1px solid red;
 }
 .nav__section-left {
   display: flex;
@@ -117,19 +116,14 @@ body {
 }
 .main__container {
   display: flex;
-  border: 1px solid black;
   justify-content: space-evenly;
 }
 .main__article {
-  border: 1px solid red;
   max-width: 700px;
   display: flex;
   max-height: 900px;
   flex-direction: column;
   justify-content: center;
-}
-.main__article h1 {
-  border: 1px solid red;
 }
 .main__heading {
   color: hsl(0deg, 0%, 8%);
@@ -165,7 +159,6 @@ body {
   transition: all 0.3ms ease-out;
 }
 .main__client-section {
-  border: 1px solid blue;
   display: flex;
   justify-content: space-between;
   height: 120px;
@@ -176,7 +169,6 @@ body {
 }
 .main__img-container {
   width: 500px;
-  border: 1px solid blue;
 }
 .main__img {
   width: 500px;
@@ -189,6 +181,9 @@ body {
   }
   .main__article {
     align-items: center;
+  }
+  .main__client-section {
+    gap: 15px;
   }
   .nav__hamburguer {
     display: block;
