--- a/styles/style.scss
+++ b/styles/style.scss
@@ -39,7 +39,6 @@ body {
     display: flex;
     justify-content: space-between;
     height: 100%;
-    border: 1px solid red;
   }
 
   &__section-left {
@@ -145,20 +144,16 @@ body {
   padding: 1rem;
   &__container {
     display: flex;
-    border: 1px solid black;
+
     justify-content: space-evenly;
   }
 
   &__article {
-    border: 1px solid red;
     max-width: 700px;
     display: flex;
     max-height: 900px;
     flex-direction: column;
     justify-content: center;
-    h1 {
-      border: 1px solid red;
-    }
   }
 
   &__heading {
@@ -196,7 +191,6 @@ body {
   }
 
   &__client-section {
-    border: 1px solid blue;
     display: flex;
     justify-content: space-between;
     height: 120px;
@@ -208,7 +202,6 @@ body {
 
   &__img-container {
     width: 500px;
-    border: 1px solid blue;
   }
   &__img {
     width: 500px;
@@ -223,6 +216,9 @@ body {
     }
     &__article {
       align-items: center;
+    }
+    &__client-section {
+      gap: 15px;
     }
   }
   .nav__hamburguer {
